# LinusTrinus

./: .flake8  .gitignore  .pre-commit-config.yaml  Discover.py  INSTALL.md  LinuxFrameGenerator.py  Makefile  OpenVR_callback.py  README.md  alvr.py  constants.py  drop_queue.py  frame_generator.py  main.py  sender.py  sensor_client.py
alvr_utils/: client_config_packet.py  framer.py  packet.py
callback/: mouse.py  open_vr.py
discover/: alvr.py
frame_generator/: ffmpeg_double_fg.py  ffmpeg_fg.py  xwd_fg.py
samples/: .gitignore  CMakeLists.txt  README.md  kill_vr.sh  make.sh
samples/driver_linus_trinus/: CMakeLists.txt  OvrController.cpp  OvrController.h  Utils.h  driver_linus_trinus.cpp  driver_linus_trinus.h  driverlog.h  k_pch.h  socket_process.cpp  socket_process.h  watchdog.cpp  watchdog.h
samples/driver_sample/: CMakeLists.txt  driver_sample.cpp
samples/shared/: alvr_packet_types.h  openvr_math.h
sender/: trinus.py
sensor_client/: alvr.py  trinus.py
sensor_client/feh/: packet.py  packet_lib.py  rs.c  rs.h  rs.pyx
utils/: base_types.py
